# mlopus

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
coverage/: class_index.html  function_index.html  index.html  status.json  z_2c998c68b71142b0___init___py.html  z_35ba7c4b8c4bc5d0___init___py.html  z_35ba7c4b8c4bc5d0_generic_py.html  z_35ba7c4b8c4bc5d0_mlflow_py.html  z_60e68e6a7721dd5f___init___py.html  z_60e68e6a7721dd5f_decorators_py.html  z_60e68e6a7721dd5f_exceptions_py.html  z_60e68e6a7721dd5f_patterns_py.html  z_60e68e6a7721dd5f_schema_py.html  z_60e68e6a7721dd5f_serde_py.html  z_60e68e6a7721dd5f_transfer_py.html  z_d2111b75628a26bf___init___py.html  z_d2111b75628a26bf_base_py.html  z_d2111b75628a26bf_contract_py.html  z_d2111b75628a26bf_entity_py.html  z_d2111b75628a26bf_exp_py.html  z_d2111b75628a26bf_model_py.html  z_d2111b75628a26bf_mv_py.html  (+22 more)
examples/: LICENSE
examples/2_a_kedro_project/: Makefile  README.md  pyproject.toml
examples/2_a_kedro_project/conf/: io.yml  logging.yml  mlflow.yml
examples/2_a_kedro_project/conf.reference/: io.yml  mlflow.yml
examples/2_a_kedro_project/conf.reference/hooks/: mlflow_artifacts.yml  mlflow_tracker.yml
examples/2_a_kedro_project/conf/base/: catalog.yml
examples/2_a_kedro_project/conf/base/globals/: globals.yml  mlflow.yml
examples/2_a_kedro_project/conf/base/parameters/: nodes.yml
examples/2_a_kedro_project/conf/base/parameters/hooks/: mlflow_artifacts.yml  mlflow_tracker.yml
examples/2_a_kedro_project/conf/full/: catalog.yml
examples/2_a_kedro_project/conf/full/globals/: mlflow.yml
examples/2_a_kedro_project/conf/full/parameters/hooks/: mlflow_artifacts.yml  mlflow_tracker.yml
examples/2_a_kedro_project/conf/hooks/: mlflow_artifacts.yml  mlflow_tracker.yml
examples/2_a_kedro_project/data/: labels.pkl  model  vectors.pkl
examples/2_a_kedro_project/notebooks/: adhoc_evaluation.ipynb  debug_session.ipynb
examples/2_a_kedro_project/src/mlopus_kedro_example/: artschema.py  cli.py  exceptions.py  model.py  nodes.py  pipeline_registry.py  settings.py  testing.py
examples/2_a_kedro_project/src/tests/: conftest.py  test_artschema.py  test_cli.py  test_model.py  test_nodes.py  test_pipelines.py  utils.py
examples/2_a_kedro_project/src/tests/conf/: logging.yml
(+367 files in other folders)
